consul/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
# The Gateway is the main infrastructure resource that links API gateway components.
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: consul
  # Configures the listener that is bound to the gateway's address.
  listeners:
    # Defines the listener protocol (HTTP, HTTPS, or TCP)
  - protocol: HTTP
    port: 5000
    name: http
    allowedRoutes:
      namespaces:
        from: All
